RESOLVED FIXED205256
Fix API availability for -_getResourceLoadStatisticsDataSummary: after r253484
https://bugs.webkit.org/show_bug.cgi?id=205256
Summary Fix API availability for -_getResourceLoadStatisticsDataSummary: after r253484
Wenson Hsieh
Reported 2019-12-15 18:55:06 PST
SSIA
Attachments
Patch (2.59 KB, patch)
2019-12-15 19:03 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-12-15 19:03:18 PST
WebKit Commit Bot
Comment 2 2019-12-16 11:54:15 PST
Comment on attachment 385730 [details] Patch Clearing flags on attachment: 385730 Committed r253570: <https://trac.webkit.org/changeset/253570>
WebKit Commit Bot
Comment 3 2019-12-16 11:54:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.