Fix API availability for -_getResourceLoadStatisticsDataSummary: after r253484 https://bugs.webkit.org/show_bug.cgi?id=205256

Reviewed by Alex Christensen.

Replaces WK_API_AVAILABLE(macos(10.15), ios(13.0)) with WK_API_AVAILABLE(macos(WK_MAC_TBA), ios(WK_IOS_TBA)),
since this is new WebKit SPI that hasn't made its way into the SDK.

* UIProcess/API/Cocoa/WKWebsiteDataStorePrivate.h:


Canonical link: https://commits.webkit.org/218483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253570 268f45cc-cd09-0410-ab3c-d52691b4dbfc